expand swagger, also fix sortBy in /tasks route
